syntax = "proto3";
package mun.ibank;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";

option go_package = "mun/x/ibank/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;
  
  google.protobuf.Duration duration_of_expiration = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true,
    (gogoproto.jsontag) = "duration_of_expiration,omitempty",
    (gogoproto.moretags) = "yaml:\"duration_of_expiration\""
  ];
}
